tests/cases/traits/ok/trait-generic-impl.ari
impl Eq[i64] for i64 {
  fn eq(self, other: i64) -> bool {
    return self == other;
  }
}

fn main() -> i64 {
  return 0;
}
