tests/cases/traits/errors/structural-capability-alias-generic.ari
type HasAdd[T] = has add(T) -> T;

fn main() -> i64 {
  return 0;
}
